# Combinate

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  LOG.md  PLAN.md  THIRD-PARTY-NOTICES.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
crates/minimal/: Cargo.toml  README.md  pgo.sh
crates/minimal/src/: birds.txt  main.rs
crates/reduce/: Cargo.toml  README.md
crates/reduce/src/: lib.rs
crates/refold/: Cargo.toml  README.md
crates/refold/examples/: probe.rs
crates/refold/src/: lib.rs  rules.txt
docs/: ADRs.md  incremental-reflow-plan.md  minimal-forms.md  perf-spike-findings.md  release-checklist.md
docs/adr/: 0001-functional-core-imperative-shell.md  0002-egg-wasm-refolder.md  0002-typing-as-a-lens-not-a-gate.md  0003-typing-as-a-lens-not-a-gate.md  0004-scott-encoding-for-data.md  0005-shareable-state-golf-sonification.md  0006-kiss-authoring-define-abstract.md  0007-microhs-in-browser-compiler.md  0008-duckdb-wasm-storage.md  0009-kernels.md  0010-3d-is-a-secondary-feature.md  0011-kernels.md  0018-incremental-reflow.md  0019-turbo-honours-rules.md  0020-3d-is-a-secondary-feature.md  0021-3d-is-a-secondary-feature.md  0024-mp4-recording-offline-frame-perfect.md  0025-htree-rotates-not-mirrors.md  0026-3d-htree-congruence-over-coil.md  0026-3d-htree-grows-inward.md  0027-minimal-forms-by-exhaustion.md  0028-semantic-class-dp.md
nix/: FORK-CHANGES.md  build-mhs-wasm.sh  build-wasm.sh  shell.nix
plans/: 00-overview.md  01-3d-input-and-fixes.md  02-progress-bar.md  03-drop-fluff.md  04-zoo-3d.md  05-discovery-flash.md  06-3d-reduction-animation.md  07-haskell-examples.md  08-controls-and-hints.md
public/: CNAME
scripts/: answer-key.mts  bench-view.ts  build-mhs-rust.sh  certify-minimal.ts  check-mhs-dist.ts  check-release.ts  gen-mhs-cache.mjs  gen-mhs-examples.ts  gen-minimal-birds.ts  gen-og.ts  gen-rules.ts  vendor-wasm.sh  wasm-reduce-check.mts
scripts/perf/: README.md  run.mjs
spec/: fixpoint-combinators.md  fixpoint-combinators.txt  iota-render.md  minimal-forms-deep.md  minimal-forms.json  minimal-forms.md  upper-techtree.md
src/: app.ts  main.ts  splash.ts  style.css  vendorUrl.ts
src/core/: authoring.ts  catalog.ts  challenges.ts  church.ts  goals.ts  graph.ts  infer.ts  kernels.ts  layout.ts  layout3d.ts  mhs.ts  native.ts  permalink.ts  (+8 more)
(+79 files in other folders)
