[package]
name = "reduce"
version = "0.1.0"
edition = "2021"
description = "wasm combinator reducer (the \"Turbo\" engine) — a resident call-by-need graph reducer with native kernels + catalog rules, plus the one-shot raw reducer kept as the cross-check oracle"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
